# gde2-panel

./: AUTHORS  COPYING-DOCS  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac
.tx/: config
applets/clock/: Makefile.am  clock-location-tile.c  clock-location.h  clock-sunpos.c  clock.c  clock.h  org.gde2.panel.ClockApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.ClockAppletFactory.service.in  org.gde2.panel.applet.clock.gschema.xml.in  set-timezone.c
applets/clock/pixmaps/: Makefile.am
applets/fish/: Makefile.am  fish.c  org.gde2.panel.FishApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.FishAppletFactory.service.in  org.gde2.panel.applet.fish.gschema.xml.in
applets/notification_area/: Makefile.am  main.c  main.h  na-tray.c  org.gde2.panel.NotificationAreaApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.NotificationAreaAppletFactory.service.in  testtray.c
applets/wncklet/: Makefile.am  org.gde2.panel.Wncklet.gde2-panel-applet.in.in  org.gde2.panel.applet.WnckletFactory.service.in  org.gde2.panel.applet.window-list.gschema.xml.in  org.gde2.panel.applet.workspace-switcher.gschema.xml.in  showdesktop.c  showdesktop.h  window-list.c  window-list.h  window-menu.c  window-menu.h  wncklet.c  wncklet.h  workspace-switcher.c  workspace-switcher.h
data/: Makefile.am  fedora.layout  mageia.layout  opensuse.layout  org.gde2.panel.gschema.xml.in  org.gde2.panel.menubar.gschema.xml.in  org.gde2.panel.object.gschema.xml.in  org.gde2.panel.toplevel.gschema.xml.in
doc/: panel-keynav.txt  panel-session-handling.txt
doc/reference/: Makefile.am
doc/reference/gde2-panel-applet/: Makefile.am  gde2-panel-applet-docs.sgml  gde2-panel-applet-sections.txt  gde2-panel-applet.types
gde2-panel/: Makefile.am  applet.c  applet.h  drawer.c  gde2-desktop-item-edit.c  gde2-panel.desktop.in.in  launcher.c  launcher.h  main.c  menu.c  menu.h  nothing.cP  panel-action-button.c  panel-action-protocol.c  panel-action-protocol.h  panel-addto.c  panel-applet-frame.c  panel-applet-frame.h  panel-applet-info.c  panel-applet-info.h  panel-applets-manager.c  panel-applets-manager.h  panel-background-monitor.c  panel-background.c  panel-bindings.c  panel-config-global.c  panel-context-menu.c  panel-ditem-editor.c  panel-ditem-editor.h  panel-icon-names.h  panel-layout.c  panel-menu-bar.c  panel-menu-button.c  panel-menu-items.c  panel-modules.c  panel-multiscreen.c  panel-profile.c  panel-properties-dialog.c  panel-properties-dialog.ui  panel-run-dialog.c  (+14 more)
gde2-panel/libegg/: eggsmclient-xsmp.c  eggsmclient.c
gde2-panel/libgde2-panel-applet-private/: Makefile.am  panel-applet-container.c  panel-applet-container.h  panel-applet-frame-dbus.c  panel-applet-frame-dbus.h  panel-applet-mini.c  panel-applets-manager-dbus.c  panel-applets-manager-dbus.h
gde2-panel/libpanel-util/: Makefile.am  panel-session-manager.h
help/: Makefile.am
help/gde2-clock/: Makefile.am
help/gde2-clock/C/: index.docbook  legal.xml
help/gde2-clock/ar/: ar.po
help/gde2-clock/ca/: ca.po
help/gde2-clock/cs/: cs.po
help/gde2-clock/da/: da.po
help/gde2-clock/el/: el.po
help/gde2-clock/en_GB/: en_GB.po
help/gde2-clock/es/: es.po
help/gde2-clock/fi/: fi.po
help/gde2-clock/oc/: oc.po
help/gde2-clock/pt_BR/: pt_BR.po
help/gde2-clock/sr/: sr.po
help/gde2-clock/th/: th.po
help/gde2-clock/uk/: uk.po
help/gde2-fish/de/: de.po
help/gde2-fish/en_GB/: en_GB.po
help/gde2-fish/es/: es.po
help/gde2-fish/fr/: fr.po
help/gde2-fish/it/: it.po
help/gde2-fish/ru/: ru.po
help/gde2-fish/sv/: sv.po
help/gde2-fish/th/: th.po
help/mate-clock/de/: de.po
help/mate-clock/eu/: eu.po
help/mate-clock/fr/: fr.po
help/mate-clock/it/: it.po
help/mate-clock/ja/: ja.po
help/mate-clock/ko/: ko.po
help/mate-clock/nl/: nl.po
help/mate-clock/pa/: pa.po
help/mate-clock/pt/: pt.po
help/mate-clock/ru/: ru.po
help/mate-clock/sv/: sv.po
help/mate-clock/zh_CN/: zh_CN.po
help/mate-clock/zh_HK/: zh_HK.po
help/mate-clock/zh_TW/: zh_TW.po
help/mate-fish/: Makefile.am
help/mate-fish/C/: index.docbook  legal.xml
help/mate-fish/ca/: ca.po
help/mate-fish/cs/: cs.po
help/mate-fish/el/: el.po
help/mate-fish/eu/: eu.po
help/mate-fish/fi/: fi.po
help/mate-fish/ja/: ja.po
help/mate-fish/ko/: ko.po
help/mate-fish/oc/: oc.po
help/mate-fish/uk/: uk.po
help/mate-fish/zh_CN/: zh_CN.po
icons/: Makefile.am
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
libgde2-panel-applet/: Makefile.am  TODO  gde2-panel-applet-factory.c  gde2-panel-applet-factory.h  gde2-panel-applet-gsettings.c  gde2-panel-applet-gsettings.h  gde2-panel-applet.c  gde2-panel-applet.h  libgde2panelapplet-4.0-uninstalled.pc.in  libgde2panelapplet-4.0.pc.in  org.gde2.panel.TestApplet.gde2-panel-applet.in  test-dbus-applet.c
man/: Makefile.am  gde2-desktop-item-edit.1  gde2-panel-test-applets.1  gde2-panel.1
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  frp.po  fur.po  fy.po  (+75 more)
